Fix file block center align behavior

--- a/core-blocks/file/editor.scss
+++ b/core-blocks/file/editor.scss
@@ -4,6 +4,10 @@
 	align-items: center;
 	margin-bottom: 0;
 
+	> div {
+		flex-grow: 1;
+	}
+
 	&.is-transient {
 		@include loading_fade;
 	}
